# queuing-redis-rust-template

./: Cargo.toml  docker-compose.yaml
assets/: index.html  script.js
src/: handlers.rs  lib.rs
