[package]
name = "redis_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full", "macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
futures = "0.3.30"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
