[package]
name = "redis_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full", "macros"] }
futures = "0.3.30"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
flume = "0.11.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "registry",
] }
tracing = "0.1.40"
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-zipkin = { version = "0.18.0", features = [
    "reqwest-client",
    "reqwest-blocking-client",
], default-features = false }
axum-tracing-opentelemetry = "0.17.0"
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
