[package]
name = "redis_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full", "macros"] }
futures = "0.3.30"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
flume = "0.11.0"
# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "registry",
] }
tracing-opentelemetry = "0.26.0"
# otel
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.25.0", features = [
    "trace",
    "tonic",
    "metrics",
] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
# otel sinks
opentelemetry-zipkin = "0.26.0"
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
# otel integrations with otel
axum-tracing-opentelemetry = "0.17.0"
